[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
chrono = { version = "0.4", features = ["unstable-locales"] }

[lib]
name = "activity"
path = "src/activitylib.rs"
